# flexom-2-api-client

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/flexom_api_client/: cli.py  config.py  logger_config.py  test.py
src/flexom_api_client/data_access/: __init__.py
src/flexom_api_client/models/: __init__.py  actuator.py  intelligent_thing.py  sensor.py  ubiant_client.py
src/flexom_api_client/services/: __init__.py  actuator_service.py  intelligent_thing_service.py
