[project]
name = "flexom-api-client"
version = "0.1.0"
description = "CLI for Flexom 2.0 domotic service."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "loguru>=0.7.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "rich-click>=1.8.4",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]
